--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-request-rpc",
   "version": "2.0.4-0",
   "description": "Web Request RPC",
+  "type": "module",
   "main": "index.js",
   "repository": {
     "type": "git",
